<?xml version="1.0"?>
<package format="2">
  <name>concise_args</name>
  <version>1.0.0</version>
  <description>The concise_args package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
<!--  <depend>libglib-dev</depend>
  <depend>python-gtk2</depend>
  <depend>gtk2</depend>
  <depend>mesa-common-dev</depend>
  <depend>opengl</depend>
  <depend>glut</depend>
  <depend>libjpeg</depend>-->
</package>
